profiling-using-exp-runner/backup_FINAL_RESULTS/hanoi_experiment_2/run_5_repetition_0/energibridge.log
sampling interval: 200, target function: tower_of_hanoi_lru_cache, input size: 20
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.hanoi as module; X = 20; module.tower_of_hanoi_lru_cache(X,A,C,B); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.21544418334961 for 0.2256436 sec of execution.
